<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/tab_home" />
    <item
        android:id="@+id/nav_menu"
        android:icon="@drawable/ic_nav_menu"
        android:title="@string/tab_menu" />
    <item
        android:id="@+id/nav_inquiries"
        android:icon="@drawable/ic_nav_inbox"
        android:title="@string/tab_inquiries" />
    <item
        android:id="@+id/nav_guide"
        android:icon="@drawable/ic_nav_guide"
        android:title="@string/tab_guide" />
    <item
        android:id="@+id/nav_stats"
        android:icon="@drawable/ic_nav_stats"
        android:title="@string/tab_stats" />
</menu>
